# audt-data

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_2.py  test_3.py  test_script.py
.github/workflows/: check_headers.yml
audt_data/acs/: batch_pp.py  helpers.py  nyc-demo-22only.sh  nyc-demo.sh
audt_data/d02_notebooks/: 05-12_gsa_OSM.ipynb  05-12_gsa_ZBP.ipynb
audt_data/d03_src/: io.py
audt_data/d03_src/pp/acs/: __init__.py  batch_pp.py  helpers.py
audt_data/d03_src/pp/geo/nyc/: pp_topology.py
audt_data/d03_src/utils/: check_headers.py  import_helper.py  repo.py
audt_data/d03_src/utils/repo/: get_repo_root.py
audt_data/d04_scripts/acs/: nyc-demo-22only.sh  nyc-demo.sh
audt_data/d04_scripts/geo/nyc/: pull.sh
audt_data/utils/: check_headers.py  logger.py
d01_data/: __init__.py
d01_data/acs/: __init__.py  batch_pp.py  helpers.py
d01_data/nyc-opendata/: __init__.py
d01_data/utils/: __init__.py  check_headers.py
d02_notebooks/: 05-12_gsa_OSM.ipynb
d04_scripts/acs/: nyc-demo-22only.sh  nyc-demo.sh
