[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audt_data"
version = "0.1.0"
description = "Data processing utilities for AUDT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "geopandas",
]
authors = [
    {name = "Matt Franchi"},
    {name = "Gabriel Agostini"},
    {name = "Jennah Gosciak"}
]

[tool.setuptools]
packages = ["audt_data"]
